--- a/App.config
+++ b/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="LinqTest.Properties.Settings.UniversitaetDBConnectionString"
+            connectionString="Data Source=Wasnezow\CVSQL;Initial Catalog=UniversitaetDB;Persist Security Info=True;User ID=sa;Password=CVjf123!;Pooling=False;Encrypt=True;TrustServerCertificate=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
